[tool.poetry]
name = "bivarcontours"
version = "0.1.0"
description = "A Function-based Unit-Aware Contour Diagram Generator which generates a contour plot of an arbitrary function with two independent variables"
authors = ["Uwe Schweinsberg"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
seaborn = "^0.13.0"
pint = "^0.23"
sphinxcontrib-log-cabinet = "^1.0.1"
pallets-sphinx-themes = "^2.1.1"
sphinx-issues = "^3.0.1"
sphinx-tabs = "^3.4.4"
pytest = "^7.4.3"
mpld3 = "^0.5.10"
sympy = "^1.12"
numexpr = "^2.8.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: mark test as a unit test",
]
